pkg/lang/testdata/ub/config/valid/configurations-multiple.ub
configurations: { aws: { default: { region: 'us-east-1' }, formal: { region: 'eu-west-1', profile: 'prod' } } }
