pkg/lang/testdata/ub/config/invalid/configurations-non-dotted-key.ub
factory: {
  configurations: { aws: { default: { region: 'x' } } }
}
